--- a/factory/css/style.css
+++ b/factory/css/style.css
@@ -69,6 +69,7 @@ PAGE
 
 .xyz-page-navigation {
   padding-top: 20px;
+  min-height: calc(100vh - 100px);
   height: calc(100% - 100px);
   width: 200px;
   background: linear-gradient(-45deg, rgba(2, 0, 36, 0.5) 0%, rgba(232, 232, 255, 0.9) 100%);
