--- a/custom/main/content/style.css
+++ b/custom/main/content/style.css
@@ -8,6 +8,9 @@ nav {
   display: block;
   width: 100vw;
   height: 100px;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: grey;
 }
 
 nav > a,
