--- a/engine/core/displays/list/list.css
+++ b/engine/core/displays/list/list.css
@@ -58,3 +58,11 @@ tr.xyz-list-foldable td:first-child::before {
 tr.xyz-list-foldable.xyz-list-folded td:first-child::before {
   content: "\00A0+\00A0";
 }
+
+.xyz-list-sorted-asc::before {
+  content: "\00A0\21E3\00A0";
+}
+
+.xyz-list-sorted-desc::before {
+  content: "\00A0\21E1\00A0";
+}
