--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -232,67 +232,7 @@ li:nth-child(5n+3) {
 li:nth-child(5n+4) {
   list-style-image: url('./orange-bullet.png');
 }
-
-.xyz-file-container {
-    background-color: darkgray;
-    padding: 10px;
-    margin:0;
-    overflow:scroll;
-    height: calc(100% - 20px);
-    width: calc(100% - 20px);
-    max-width: calc(100% - 20px);
-    max-height: calc(70vh - 20px);
-}
-
-.xyz-file-flat {
-    font-family: monospace;
-    white-space: pre-wrap;
-    /*box-shadow: 2px 2px 2px;*/
-    background-color: white;
-    padding: 10px;
-}.xyz-login a {
-  color: blue;
-  cursor: pointer;
-  margin: 5px;
-}
-
-.xyz-login a:hover {
-  text-decoration: underline;
-}
-
-.xyz-login-message {
-  background-color: khaki;
-  color: black;
-  border-radius: 5px;
-  text-align: center;
-  animation-iteration-count: 1;
-  animation-duration: 10s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes xyz-login-hide {
-  from {
-    visibility: visible;
-    opacity: 1;
-  }
-
-  to {
-    visibility: hidden;
-    opacity: 0;
-  }
-}
-
-.xyz-login-capslock-notifier {
-  color: red;
-}
-
-.xyz-reference {
-    cursor: pointer;
-}
-
-.xyz-reference:hover {
-    background-color: lightblue;
-}table.xyz-create,
+table.xyz-create,
 table.xyz-item,
 table.xyz-list {
   /* border: 1px solid lightgrey;
@@ -351,6 +291,14 @@ tr.xyz-list-foldable td:first-child::before {
 
 tr.xyz-list-foldable.xyz-list-folded td:first-child::before {
   content: "\00A0+\00A0";
+}
+
+.xyz-list-sorted-asc::before {
+  content: "\00A0\21E3\00A0";
+}
+
+.xyz-list-sorted-desc::before {
+  content: "\00A0\21E1\00A0";
 }
 .xyz-map-wrapper {
 }
@@ -687,3 +635,64 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     cursor: help;
 }
 
+
+.xyz-file-container {
+    background-color: darkgray;
+    padding: 10px;
+    margin:0;
+    overflow:scroll;
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
+    max-width: calc(100% - 20px);
+    max-height: calc(70vh - 20px);
+}
+
+.xyz-file-flat {
+    font-family: monospace;
+    white-space: pre-wrap;
+    /*box-shadow: 2px 2px 2px;*/
+    background-color: white;
+    padding: 10px;
+}.xyz-login a {
+  color: blue;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.xyz-login a:hover {
+  text-decoration: underline;
+}
+
+.xyz-login-message {
+  background-color: khaki;
+  color: black;
+  border-radius: 5px;
+  text-align: center;
+  animation-iteration-count: 1;
+  animation-duration: 10s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes xyz-login-hide {
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  to {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
+.xyz-login-capslock-notifier {
+  color: red;
+}
+
+.xyz-reference {
+    cursor: pointer;
+}
+
+.xyz-reference:hover {
+    background-color: lightblue;
+}
