Add item select and deselect ui

--- a/engine/core/displays/list/list.css
+++ b/engine/core/displays/list/list.css
@@ -38,7 +38,7 @@ table.xyz-list tr.xyz-list-selectable:hover {
   background-color: lightblue;
 }
 
-table.xyz-list tr.xyz-list-selected {
+table.xyz-list > tr.xyz-list-selected {
   background-color: yellow;
 }
 
