--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -1,19 +1,5 @@
 /* This file is created by gulpfile.js using the css definitions of engine/core and factory/css */
 
-table.xyz-item > tr.xyz-item-selected.xyz-item-header {
-  background-color: yellow;
-  color: black;
-}
-
-span.xyz-item-deselect {
-  float: right;
-  cursor: pointer;
-  margin-right: 5px;
-}
-
-span.xyz-item-deselect::before {
-  content: "\2715";
-}
 html,
 body {
   padding: 0;
@@ -276,6 +262,20 @@ li:nth-child(5n+3) {
 li:nth-child(5n+4) {
   list-style-image: url('./orange-bullet.png');
 }
+table.xyz-item > tr.xyz-item-selected.xyz-item-header {
+  background-color: yellow;
+  color: black;
+}
+
+span.xyz-item-deselect {
+  float: right;
+  cursor: pointer;
+  margin-right: 5px;
+}
+
+span.xyz-item-deselect::before {
+  content: "\2715";
+}
 table.xyz-create,
 table.xyz-item,
 table.xyz-list {
@@ -308,15 +308,18 @@ table.xyz-list tr:nth-child(even) {
   width: 100%;
 }
 
-table.xyz-list tr.xyz-list-selectable {
+table.xyz-list > tr.xyz-list-selectable,
+table.xyz-list > tbody > tr.xyz-list-selectable {
   cursor: pointer;
 }
 
-table.xyz-list tr.xyz-list-selectable:hover {
+table.xyz-list > tr.xyz-list-selectable:hover,
+table.xyz-list > tbody > tr.xyz-list-selectable:hover {
   background-color: lightblue;
 }
 
-table.xyz-list > tr.xyz-list-selected {
+table.xyz-list > tr.xyz-list-selected,
+table.xyz-list > tbody > tr.xyz-list-selected {
   background-color: yellow;
 }
 
@@ -458,7 +461,10 @@ div.xyz-timeline-line {
     height: 100%;
     width:2px;
     background-color: black;
-}@charset "UTF-8";
+}.xyz-title.xyz-selected {
+  background-color: yellow;
+}
+@charset "UTF-8";
 
 /*!
  * Pikaday
@@ -697,7 +703,25 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     cursor: help;
 }
 
-.xyz-login a {
+
+.xyz-file-container {
+    background-color: darkgray;
+    padding: 10px;
+    margin:0;
+    overflow:scroll;
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
+    max-width: calc(100% - 20px);
+    max-height: calc(70vh - 20px);
+}
+
+.xyz-file-flat {
+    font-family: monospace;
+    white-space: pre-wrap;
+    /*box-shadow: 2px 2px 2px;*/
+    background-color: white;
+    padding: 10px;
+}.xyz-login a {
   color: blue;
   cursor: pointer;
   margin: 5px;
@@ -733,24 +757,6 @@ http://nicolasgallagher.com/micro-clearfix-hack/
   color: red;
 }
 
-.xyz-file-container {
-    background-color: darkgray;
-    padding: 10px;
-    margin:0;
-    overflow:scroll;
-    height: calc(100% - 20px);
-    width: calc(100% - 20px);
-    max-width: calc(100% - 20px);
-    max-height: calc(70vh - 20px);
-}
-
-.xyz-file-flat {
-    font-family: monospace;
-    white-space: pre-wrap;
-    /*box-shadow: 2px 2px 2px;*/
-    background-color: white;
-    padding: 10px;
-}
 .xyz-reference {
     cursor: pointer;
 }
