--- a/engine/core/displays/item/item.css
+++ b/engine/core/displays/item/item.css
@@ -3,7 +3,18 @@ table.xyz-item > tr.xyz-item-selected.xyz-item-header {
   color: black;
 }
 
+td.xyz-item-key {
+  vertical-align: top;
+}
+
 span.xyz-item-deselect {
+  font-size: 75%;
+  line-height: 30px;
+}
+
+span.xyz-item-deselect,
+span.xyz-item-maximize,
+span.xyz-item-minimize {
   float: right;
   cursor: pointer;
   margin-right: 5px;
@@ -13,6 +24,34 @@ span.xyz-item-deselect::before {
   content: "\2715";
 }
 
-td.xyz-item-key {
-  vertical-align: top;
+span.xyz-item-maximize::before {
+  content: "\2610";
+}
+
+span.xyz-item-minimize::before {
+  content: "_";
+}
+
+table.xyz-item-minimized > thead {
+  cursor: pointer;
+}
+
+table.xyz-item-maximized span.xyz-item-maximize::before,
+table.xyz-item-minimized span.xyz-item-minimize::before {
+  content: "\2750";
+}
+
+table.xyz-item-maximized {
+  z-index: 100000 !important;
+  position: fixed !important;
+  height: 100vh !important;
+  width: 100vw !important;
+  top: 0 !important;
+  left: 0 !important;
+}
+
+table.xyz-item-maximized span.xyz-item-minimize,
+table.xyz-item-minimized span.xyz-item-maximize,
+table.xyz-item-minimized > tbody {
+  display: none !important;
 }
