--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -262,15 +262,68 @@ li:nth-child(5n+3) {
 li:nth-child(5n+4) {
   list-style-image: url('./orange-bullet.png');
 }
+table.xyz-item > tr.xyz-item-selected.xyz-item-header {
+  background-color: yellow;
+  color: black;
+}
+
+td.xyz-item-key {
+  vertical-align: top;
+}
+
+span.xyz-item-deselect {
+  font-size: 75%;
+  line-height: 30px;
+}
+
+span.xyz-item-deselect,
+span.xyz-item-maximize,
+span.xyz-item-minimize {
+  float: right;
+  cursor: pointer;
+  margin-right: 5px;
+}
+
+span.xyz-item-deselect::before {
+  content: "\2715";
+}
+
+span.xyz-item-maximize::before {
+  content: "\2610";
+}
+
+span.xyz-item-minimize::before {
+  content: "_";
+}
+
+table.xyz-item-minimized > thead {
+  cursor: pointer;
+}
+
+table.xyz-item-maximized span.xyz-item-maximize::before,
+table.xyz-item-minimized span.xyz-item-minimize::before {
+  content: "\2750";
+}
+
+table.xyz-item-maximized {
+  z-index: 10000 !important;
+  position: fixed !important;
+  height: 100vh !important;
+  width: 100vw !important;
+  top: 0 !important;
+  left: 0 !important;
+}
+
+table.xyz-item-maximized span.xyz-item-minimize,
+table.xyz-item-minimized span.xyz-item-maximize,
+table.xyz-item-minimized > tbody {
+  display: none !important;
+}
 table.xyz-create,
 table.xyz-item,
 table.xyz-list {
-  /* border: 1px solid lightgrey;
-    margin-bottom: 5px; */
   padding: 0;
   border-collapse: collapse;
-
-  /* table-layout: fixed; */
   background-color: white;
 }
 
@@ -388,24 +441,6 @@ tr.xyz-list-search > td > input {
   top: 3px;
   text-shadow: 1px 1px black;
   color: white;
-}
-table.xyz-item > tr.xyz-item-selected.xyz-item-header {
-  background-color: yellow;
-  color: black;
-}
-
-span.xyz-item-deselect {
-  float: right;
-  cursor: pointer;
-  margin-right: 5px;
-}
-
-span.xyz-item-deselect::before {
-  content: "\2715";
-}
-
-td.xyz-item-key {
-  vertical-align: top;
 }
 div.xyz-timeline-wrapper {
     position: relative;
@@ -726,13 +761,6 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     /*box-shadow: 2px 2px 2px;*/
     background-color: white;
     padding: 10px;
-}
-.xyz-reference {
-    cursor: pointer;
-}
-
-.xyz-reference:hover {
-    background-color: lightblue;
 }.xyz-login a {
   color: blue;
   cursor: pointer;
@@ -767,4 +795,12 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 
 .xyz-login-capslock-notifier {
   color: red;
+}
+
+.xyz-reference {
+    cursor: pointer;
+}
+
+.xyz-reference:hover {
+    background-color: lightblue;
 }
