--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -262,6 +262,63 @@ li:nth-child(5n+3) {
 li:nth-child(5n+4) {
   list-style-image: url('./orange-bullet.png');
 }
+table.xyz-item > tr.xyz-item-selected.xyz-item-header {
+  background-color: yellow;
+  color: black;
+}
+
+td.xyz-item-key {
+  vertical-align: top;
+}
+
+span.xyz-item-deselect {
+  font-size: 75%;
+  line-height: 30px;
+}
+
+span.xyz-item-deselect,
+span.xyz-item-maximize,
+span.xyz-item-minimize {
+  float: right;
+  cursor: pointer;
+  margin-right: 5px;
+}
+
+span.xyz-item-deselect::before {
+  content: "\2715";
+}
+
+span.xyz-item-maximize::before {
+  content: "\2610";
+}
+
+span.xyz-item-minimize::before {
+  content: "_";
+}
+
+table.xyz-item-minimized > thead {
+  cursor: pointer;
+}
+
+table.xyz-item-maximized span.xyz-item-maximize::before,
+table.xyz-item-minimized span.xyz-item-minimize::before {
+  content: "\2750";
+}
+
+table.xyz-item-maximized {
+  z-index: 100000 !important;
+  position: fixed !important;
+  height: 100vh !important;
+  width: 100vw !important;
+  top: 0 !important;
+  left: 0 !important;
+}
+
+table.xyz-item-maximized span.xyz-item-minimize,
+table.xyz-item-minimized span.xyz-item-maximize,
+table.xyz-item-minimized > tbody {
+  display: none !important;
+}
 table.xyz-create,
 table.xyz-item,
 table.xyz-list {
@@ -456,64 +513,7 @@ div.xyz-timeline-line {
     height: 100%;
     width:2px;
     background-color: black;
-}table.xyz-item > tr.xyz-item-selected.xyz-item-header {
-  background-color: yellow;
-  color: black;
-}
-
-td.xyz-item-key {
-  vertical-align: top;
-}
-
-span.xyz-item-deselect {
-  font-size: 75%;
-  line-height: 30px;
-}
-
-span.xyz-item-deselect,
-span.xyz-item-maximize,
-span.xyz-item-minimize {
-  float: right;
-  cursor: pointer;
-  margin-right: 5px;
-}
-
-span.xyz-item-deselect::before {
-  content: "\2715";
-}
-
-span.xyz-item-maximize::before {
-  content: "\2610";
-}
-
-span.xyz-item-minimize::before {
-  content: "_";
-}
-
-table.xyz-item-minimized > thead {
-  cursor: pointer;
-}
-
-table.xyz-item-maximized span.xyz-item-maximize::before,
-table.xyz-item-minimized span.xyz-item-minimize::before {
-  content: "\2750";
-}
-
-table.xyz-item-maximized {
-  z-index: 100000 !important;
-  position: fixed !important;
-  height: 100vh !important;
-  width: 100vw !important;
-  top: 0 !important;
-  left: 0 !important;
-}
-
-table.xyz-item-maximized span.xyz-item-minimize,
-table.xyz-item-minimized span.xyz-item-maximize,
-table.xyz-item-minimized > tbody {
-  display: none !important;
-}
-.xyz-title.xyz-selected {
+}.xyz-title.xyz-selected {
   background-color: yellow;
 }
 @charset "UTF-8";
