--- a/factory/css/style.css
+++ b/factory/css/style.css
@@ -261,3 +261,35 @@ li:nth-child(5n+3) {
 li:nth-child(5n+4) {
   list-style-image: url('./orange-bullet.png');
 }
+
+/* ====================================================================================================
+Pending Request Indicator
+==================================================================================================== */
+
+#xyz-pendingRequestIndicator {
+  pointer-events: none;
+  position: fixed;
+  width: 68px;
+  height: 68px;
+  z-index: 1000;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  left: 50vw;
+  top: 50vh;
+  transform: translate(-50%, -50%);
+  background-image: url('./pendingIndicator.png');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 64px 64px;
+  animation: rotation 2s linear infinite;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(359deg);
+  }
+}
