--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -295,6 +295,260 @@ Pending Request Indicator
     transform: rotate(359deg);
   }
 }
+table.xyz-item > tr.xyz-item-selected.xyz-item-header {
+  background-color: yellow;
+  color: black;
+}
+
+td.xyz-item-key {
+  vertical-align: top;
+}
+
+span.xyz-item-deselect {
+  font-size: 75%;
+  line-height: 30px;
+}
+
+span.xyz-item-deselect,
+span.xyz-item-maximize,
+span.xyz-item-minimize {
+  float: right;
+  cursor: pointer;
+  margin-right: 5px;
+}
+
+span.xyz-item-deselect::before {
+  content: "\2715";
+}
+
+span.xyz-item-maximize::before {
+  content: "\2610";
+}
+
+span.xyz-item-minimize::before {
+  content: "_";
+}
+
+table.xyz-item-minimized > thead {
+  cursor: pointer;
+}
+
+table.xyz-item-maximized span.xyz-item-maximize::before,
+table.xyz-item-minimized span.xyz-item-minimize::before {
+  content: "\2750";
+}
+
+table.xyz-item-maximized {
+  z-index: 100000 !important;
+  position: fixed !important;
+  height: 100vh !important;
+  width: 100vw !important;
+  top: 0 !important;
+  left: 0 !important;
+}
+
+table.xyz-item-maximized span.xyz-item-minimize,
+table.xyz-item-minimized span.xyz-item-maximize,
+table.xyz-item-minimized > tbody {
+  display: none !important;
+}
+table.xyz-create,
+table.xyz-item,
+table.xyz-list {
+  padding: 0;
+  border-collapse: collapse;
+  background-color: white;
+}
+
+.xyz-list-header,
+.xyz-create-header,
+.xyz-item-header,
+table tbody:first-child tr.xyz-create-header,
+table tbody:first-child tr.xyz-list-header,
+table tbody:first-child tr.xyz-item-header {
+  background-color: darkslateblue;
+  color: white;
+}
+
+table.xyz-create tr:nth-child(even),
+table.xyz-item tr:nth-child(even),
+table.xyz-list tr:nth-child(even) {
+  background: rgba(155, 155, 155, 0.2);
+}
+
+.xyz-list,
+.xyz-item {
+  width: 100%;
+}
+
+table.xyz-list > tr.xyz-list-selectable,
+table.xyz-list > tbody > tr.xyz-list-selectable {
+  cursor: pointer;
+}
+
+table.xyz-list > tr.xyz-list-selectable:hover,
+table.xyz-list > tbody > tr.xyz-list-selectable:hover {
+  background-color: lightblue;
+}
+
+table.xyz-list > tr.xyz-list-selected,
+table.xyz-list > tbody > tr.xyz-list-selected {
+  background-color: yellow;
+}
+
+td.xyz-list-icon {
+  width: 30px;
+  max-width: 30px;
+}
+
+tr.xyz-list-foldable {
+  cursor: pointer;
+}
+
+tr.xyz-list-foldable td:first-child::before {
+  content: "\00A0-\00A0";
+}
+
+tr.xyz-list-foldable.xyz-list-folded td:first-child::before {
+  content: "\00A0+\00A0";
+}
+
+.xyz-list-sorted-asc::before {
+  content: "\00A0\21E3\00A0";
+}
+
+.xyz-list-sorted-desc::before {
+  content: "\00A0\21E1\00A0";
+}
+
+tr.xyz-list-search > td {
+  padding: 0;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: lightgrey;
+}
+
+tr.xyz-list-search > td > input {
+  width: 100%;
+  display: block;
+  border-style: none;
+  outline-style: none;
+  padding: 3;
+  font-size: inherit;
+  margin: 0;
+}
+
+.xyz-list-search-clear {
+  margin-top: -1.7em;
+  display: block;
+  float: right;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.xyz-list-search-clear::before {
+  content: "\2715";
+}
+.xyz-map-wrapper {
+}
+
+.ol-zoom-in,
+.ol-zoom-out,
+.ol-zoom-fit {
+  height: 2em;
+  width: 2em;
+  margin: 2px;
+  float: left;
+  background-color: darkslateblue;
+  color: white;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.ol-rotate-reset,
+.ol-attribution {
+  display: none;
+}
+
+.xyz-map {
+  position: relative;
+}
+
+.xyz-map-message {
+  pointer-events: none;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 100;
+  right: 0;
+  top: 3px;
+  text-shadow: 1px 1px black;
+  color: white;
+}
+div.xyz-timeline-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+div.xyz-timeline-node {
+    transform: translate(-50%,-50%);
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-radius: 10px;
+    background-color: green;
+}
+
+div.xyz-timeline-connector {
+    z-index:1;
+    position: absolute;
+    width: 100px;
+    height: 4px;
+    background-color: green;
+}
+
+div.xyz-timeline-label {
+    z-index:2;
+    position: absolute;
+    padding:10px;
+    color:white;
+    border-radius: 10px;
+    background-color: green;
+}
+
+div.xyz-timeline-label:hover {
+    cursor: pointer;
+    background-color: rgb(0,200,0);
+}
+div.xyz-timeline-label.xyz-list-selected {
+    color:black;
+    background-color: yellow;
+}
+
+div.xyz-timeline-line-creator {
+    position: absolute;
+    width:10px;
+    height:10px;
+    pointer-events: none;
+    cursor: none;
+    /*display: none;*/
+}
+
+
+div.xyz-timeline-line {
+    transform: translate(-50%,-50%);
+    position: absolute;
+    top:50%;
+    left:50%;
+    height: 100%;
+    width:2px;
+    background-color: black;
+}.xyz-title.xyz-selected {
+  background-color: yellow;
+}
 @charset "UTF-8";
 
 /*!
@@ -534,7 +788,25 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     cursor: help;
 }
 
-.xyz-login a {
+
+.xyz-file-container {
+    background-color: darkgray;
+    padding: 10px;
+    margin:0;
+    overflow:scroll;
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
+    max-width: calc(100% - 20px);
+    max-height: calc(70vh - 20px);
+}
+
+.xyz-file-flat {
+    font-family: monospace;
+    white-space: pre-wrap;
+    /*box-shadow: 2px 2px 2px;*/
+    background-color: white;
+    padding: 10px;
+}.xyz-login a {
   color: blue;
   cursor: pointer;
   margin: 5px;
@@ -570,281 +842,10 @@ http://nicolasgallagher.com/micro-clearfix-hack/
   color: red;
 }
 
-.xyz-file-container {
-    background-color: darkgray;
-    padding: 10px;
-    margin:0;
-    overflow:scroll;
-    height: calc(100% - 20px);
-    width: calc(100% - 20px);
-    max-width: calc(100% - 20px);
-    max-height: calc(70vh - 20px);
-}
-
-.xyz-file-flat {
-    font-family: monospace;
-    white-space: pre-wrap;
-    /*box-shadow: 2px 2px 2px;*/
-    background-color: white;
-    padding: 10px;
-}
 .xyz-reference {
     cursor: pointer;
 }
 
 .xyz-reference:hover {
     background-color: lightblue;
-}table.xyz-create,
-table.xyz-item,
-table.xyz-list {
-  padding: 0;
-  border-collapse: collapse;
-  background-color: white;
-}
-
-.xyz-list-header,
-.xyz-create-header,
-.xyz-item-header,
-table tbody:first-child tr.xyz-create-header,
-table tbody:first-child tr.xyz-list-header,
-table tbody:first-child tr.xyz-item-header {
-  background-color: darkslateblue;
-  color: white;
-}
-
-table.xyz-create tr:nth-child(even),
-table.xyz-item tr:nth-child(even),
-table.xyz-list tr:nth-child(even) {
-  background: rgba(155, 155, 155, 0.2);
-}
-
-.xyz-list,
-.xyz-item {
-  width: 100%;
-}
-
-table.xyz-list > tr.xyz-list-selectable,
-table.xyz-list > tbody > tr.xyz-list-selectable {
-  cursor: pointer;
-}
-
-table.xyz-list > tr.xyz-list-selectable:hover,
-table.xyz-list > tbody > tr.xyz-list-selectable:hover {
-  background-color: lightblue;
-}
-
-table.xyz-list > tr.xyz-list-selected,
-table.xyz-list > tbody > tr.xyz-list-selected {
-  background-color: yellow;
-}
-
-td.xyz-list-icon {
-  width: 30px;
-  max-width: 30px;
-}
-
-tr.xyz-list-foldable {
-  cursor: pointer;
-}
-
-tr.xyz-list-foldable td:first-child::before {
-  content: "\00A0-\00A0";
-}
-
-tr.xyz-list-foldable.xyz-list-folded td:first-child::before {
-  content: "\00A0+\00A0";
-}
-
-.xyz-list-sorted-asc::before {
-  content: "\00A0\21E3\00A0";
-}
-
-.xyz-list-sorted-desc::before {
-  content: "\00A0\21E1\00A0";
-}
-
-tr.xyz-list-search > td {
-  padding: 0;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-bottom-color: lightgrey;
-}
-
-tr.xyz-list-search > td > input {
-  width: 100%;
-  display: block;
-  border-style: none;
-  outline-style: none;
-  padding: 3;
-  font-size: inherit;
-  margin: 0;
-}
-
-.xyz-list-search-clear {
-  margin-top: -1.7em;
-  display: block;
-  float: right;
-  margin-right: 5px;
-  cursor: pointer;
-}
-
-.xyz-list-search-clear::before {
-  content: "\2715";
-}
-table.xyz-item > tr.xyz-item-selected.xyz-item-header {
-  background-color: yellow;
-  color: black;
-}
-
-td.xyz-item-key {
-  vertical-align: top;
-}
-
-span.xyz-item-deselect {
-  font-size: 75%;
-  line-height: 30px;
-}
-
-span.xyz-item-deselect,
-span.xyz-item-maximize,
-span.xyz-item-minimize {
-  float: right;
-  cursor: pointer;
-  margin-right: 5px;
-}
-
-span.xyz-item-deselect::before {
-  content: "\2715";
-}
-
-span.xyz-item-maximize::before {
-  content: "\2610";
-}
-
-span.xyz-item-minimize::before {
-  content: "_";
-}
-
-table.xyz-item-minimized > thead {
-  cursor: pointer;
-}
-
-table.xyz-item-maximized span.xyz-item-maximize::before,
-table.xyz-item-minimized span.xyz-item-minimize::before {
-  content: "\2750";
-}
-
-table.xyz-item-maximized {
-  z-index: 100000 !important;
-  position: fixed !important;
-  height: 100vh !important;
-  width: 100vw !important;
-  top: 0 !important;
-  left: 0 !important;
-}
-
-table.xyz-item-maximized span.xyz-item-minimize,
-table.xyz-item-minimized span.xyz-item-maximize,
-table.xyz-item-minimized > tbody {
-  display: none !important;
-}
-div.xyz-timeline-wrapper {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-div.xyz-timeline-node {
-    transform: translate(-50%,-50%);
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    border-radius: 10px;
-    background-color: green;
-}
-
-div.xyz-timeline-connector {
-    z-index:1;
-    position: absolute;
-    width: 100px;
-    height: 4px;
-    background-color: green;
-}
-
-div.xyz-timeline-label {
-    z-index:2;
-    position: absolute;
-    padding:10px;
-    color:white;
-    border-radius: 10px;
-    background-color: green;
-}
-
-div.xyz-timeline-label:hover {
-    cursor: pointer;
-    background-color: rgb(0,200,0);
-}
-div.xyz-timeline-label.xyz-list-selected {
-    color:black;
-    background-color: yellow;
-}
-
-div.xyz-timeline-line-creator {
-    position: absolute;
-    width:10px;
-    height:10px;
-    pointer-events: none;
-    cursor: none;
-    /*display: none;*/
-}
-
-
-div.xyz-timeline-line {
-    transform: translate(-50%,-50%);
-    position: absolute;
-    top:50%;
-    left:50%;
-    height: 100%;
-    width:2px;
-    background-color: black;
-}.xyz-title.xyz-selected {
-  background-color: yellow;
-}
-.xyz-map-wrapper {
-}
-
-.ol-zoom-in,
-.ol-zoom-out,
-.ol-zoom-fit {
-  height: 2em;
-  width: 2em;
-  margin: 2px;
-  float: left;
-  background-color: darkslateblue;
-  color: white;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-.ol-rotate-reset,
-.ol-attribution {
-  display: none;
-}
-
-.xyz-map {
-  position: relative;
-}
-
-.xyz-map-message {
-  pointer-events: none;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  z-index: 100;
-  right: 0;
-  top: 3px;
-  text-shadow: 1px 1px black;
-  color: white;
 }
