Use range headers to display progress

--- a/factory/css/style.css
+++ b/factory/css/style.css
@@ -277,11 +277,24 @@ Pending Request Indicator
   left: 50vw;
   top: 50vh;
   transform: translate(-50%, -50%);
+}
+
+#xyz-pendingRequestIndicator div {
+  width: 68px;
+  height: 68px;
   background-image: url('./pendingIndicator.png');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 64px 64px;
   animation: rotation 2s linear infinite;
+}
+
+#xyz-pendingRequestIndicator span {
+  position: absolute;
+  top: 25px;
+  width: 100%;
+  text-align: center;
+  font-size: 10px;
 }
 
 @keyframes rotation {
